5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1723_2498.log
== TEST (2019-05-12 10:11:08) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:12:53) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:13:14) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:21:13) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	if(cresca>=crescb):
		print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:21:57) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	if(cresca>=crescb):
		break
print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:24:16) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	if(cresca>=crescb):
		print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:25:53) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	if(cresca>=crescb):
		break
		print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:26:17) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	anos=anos+1
	if(cresca>=crescb):
		print(anos)
		break
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:27:30) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	cresca= (pa/100)*a
	crescb= (pb/100)*b
	anos=anos+1
	if(cresca>=crescb):
		print(anos)
		break
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:28:09) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	cresca= (pa/100)*a
	crescb= (pb/100)*b
	anos=anos+1
	if(cresca>=crescb):
		break
print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:30:15) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	cresca= (pa/100)*a
	crescb= (pb/100)*b
	anos=anos+1
	if(cresca>=crescb):
		print(anos)
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:33:24) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	cresca= (pa/100)*a
	crescb= (pb/100)*b
anos=anos+1	
	if(cresca>=crescb):
		break
print(anos)
-- ERROR:
File "XXXX", line 13
    if(cresca>=crescb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:34:48) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))

cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	cresca= (pa/100)*a
	crescb= (pb/100)*b
	if(cresca>=crescb):
		break
	else:
		anos=anos+1
print(anos)
-- ERROR:
File "XXXX", line 13
    if(cresca>=crescb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:38:56) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
popa= a
popb= b
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (cresca<=crescb):
	popa=popa+ (pa/100)*a
	popb= popb+(pb/100)*b
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- ERROR:
File "XXXX", line 13
    if(cresca>=crescb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:40:22) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
popa= a
popb= b
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (popa<=popb):
	popa=popa+ (pa/100)*a
	popb= popb+(pb/100)*b
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:41:37) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
popa= a
popb= b
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (popa<=popb):
	popa=popa+ (pa/100)*a
	popb= popb+(pb/100)*b
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:41:54) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
popa= a
popb= b
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (popa<=popb):
	popa=popa+ (pa/100)*a
	popb= popb+(pb/100)*b
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:42:39) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
popa= a
popb= b
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:43:50) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    cresca= (pa/100)*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:44:11) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:44:51) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:48:12) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:49:28) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 10:57:02) 
-- CODE:
a= int(input("qual o numero de habitantes da cidade a? "))
b= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
popa= a
popb= b
cresca= (pa/100)*a
crescb= (pb/100)*b
anos=0
while (popa<=popb):
	popa=popa+ (pa/100)*a
	popb= popb+(pb/100)*b
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- EXECUTION TIME:
0.123811
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
11
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
qual o numero de habitantes da cidade a? qual o numerod e habitantes da cidade b? qual o percentual de crescimento da cidade a? qual o percentual de crescimento da cidade b? 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 11:00:01) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>=popb):
		break
	else:
		anos=anos+1
print(anos)
-- EXECUTION TIME:
0.32644
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
11
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
qual o numero de habitantes da cidade a? qual o numerod e habitantes da cidade b? qual o percentual de crescimento da cidade a? qual o percentual de crescimento da cidade b? 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:11:47) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:01:54) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>popb):
		break
	else:
		anos=anos+1
print(anos)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:03:47) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ cresca
	popb= popb+crescb
	if(popa>popb):
		print(anos)
	else:
		anos=anos+1

-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:07:02) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ (pa/100)*popa
	popb= popb+(pb/100)*popb
	anos=anos+1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:07:09) 
-- CODE:
popa= int(input("qual o numero de habitantes da cidade a? "))
popb= int(input("qual o numerod e habitantes da cidade b? "))
pa= float(input("qual o percentual de crescimento da cidade a? "))
pb= float(input("qual o percentual de crescimento da cidade b? "))
cresca= (pa/100)*popa
crescb= (pb/100)*popb
anos=0
while (popa<=popb):
	popa=popa+ (pa/100)*popa
	popb= popb+(pb/100)*popb
	anos=anos+1
print(anos)
-- EXECUTION TIME:
0.17875
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
